fix: supprimer tous les warnings Eclipse
- AnticheatTabCompleter : import Collectors inutilisé supprimé
- AlertManager : champ plugin inutilisé supprimé
- DiscordWebhookManager : new URL(String) → URI.create().toURL()
- FlyCheck, StepCheck, ScaffoldCheck, AnticheatCommand :
  @SuppressWarnings("deprecation") sur isOnGround() (deprecated Paper 1.21)

https://claude.ai/code/session_01Je6Zu5itKt2QK4VHQMHnx8